# hermit-template-rs

./: Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml
.cargo/: config
src/: main.rs
