[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2018"
description = "{{project-name}}, a rusty-hermit application"
repository = "https://github.com/username/{{project-name}}"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusty-loader]
git = "https://github.com/hermitcore/rusty-loader"
rev = "c649f4cbd3d7039d0d649a2bfd7b005778c990b4"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = { version = "0.1.*", features = ["smoltcp", "dhcpv4"] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1