[package]
name = "{{ crate_name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2018"
description = "{{project-name}}, a rusty-hermit application"
repository = "https://github.com/username/{{project-name}}"
license = "MIT/Apache-2.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = { version = "0.1.*", features = ["smoltcp", "dhcpv4"] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1